added files to deploy