@@ -1,5 +1,8 @@
 package com.finalProject.linkedin.controllers;
 
+import static org.junit.Assert.assertEquals;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.*;
 import com.finalProject.linkedin.controller.FavoriteController;
 import com.finalProject.linkedin.dto.request.favorite.CreateFavoriteReq;
 import com.finalProject.linkedin.dto.responce.favorite.CreateFavoriteRes;
@@ -11,24 +14,18 @@ import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
-import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-
+import java.util.Arrays;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.*;
-
-@SpringBootTest
-public class FavoriteControllerTest {
-
-    @Mock
-    private FavoriteServiceImpl favoriteService;
+class FavoriteControllerTest {
 
     @InjectMocks
     private FavoriteController favoriteController;
+
+    @Mock
+    private FavoriteServiceImpl favoriteService;
 
     @BeforeEach
     void setUp() {
@@ -36,46 +33,51 @@ public class FavoriteControllerTest {
     }
 
     @Test
-    void toggleFavoriteValidRequestReturnsFavoriteRes() {
-        CreateFavoriteReq req = new CreateFavoriteReq(1L, 2L, TargetType.PROFILE_LIKE, true);
-        CreateFavoriteRes res = new CreateFavoriteRes(req);
-
+    void toggleFavoriteShouldReturnFavoriteResponse() {
+        // Arrange
+        CreateFavoriteReq req = new CreateFavoriteReq(); // заполните необходимые поля
+        CreateFavoriteRes res = new CreateFavoriteRes(); // заполните необходимые поля
         when(favoriteService.addFavorite(any(CreateFavoriteReq.class))).thenReturn(res);
 
+        // Act
         ResponseEntity<CreateFavoriteRes> response = favoriteController.toggleFavorite(req);
 
+        // Assert
+        verify(favoriteService).addFavorite(req);
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertEquals(res, response.getBody());
-        verify(favoriteService).addFavorite(any(CreateFavoriteReq.class));
     }
 
     @Test
-    void removeFavoriteValidRequestReturnsNoContent() {
+    void removeFavoriteShouldReturnNoContent() {
+        // Arrange
         Long userId = 1L;
         Long targetId = 2L;
-        TargetType targetType = TargetType.PROFILE_LIKE;
+        TargetType targetType = TargetType.PROFILE_LIKE; // Убедитесь, что это правильный тип
 
-        doNothing().when(favoriteService).removeFavorite(userId, targetId, targetType);
-
+        // Act
         ResponseEntity<Void> response = favoriteController.removeFavorite(userId, targetId, targetType);
 
-        assertEquals(HttpStatus.NO_CONTENT, response.getStatusCode());
+        // Assert
         verify(favoriteService).removeFavorite(userId, targetId, targetType);
+        assertEquals(HttpStatus.NO_CONTENT, response.getStatusCode());
     }
 
     @Test
-    void getFavoritesByTargetValidRequestReturnsFavoritesList() {
-        Long targetId = 2L;
-        TargetType targetType = TargetType.POST_LIKE;
-        List<Favorite> favorites = List.of(new Favorite(1L, 1L, 2L, TargetType.POST_LIKE, true));
+    void getFavoritesByTargetShouldReturnFavoritesList() {
+        // Arrange
+        Long targetId = 1L;
+        TargetType targetType = TargetType.POST_LIKE; // Убедитесь, что это правильный тип
+        Favorite favorite = new Favorite(); // заполните необходимые поля
+        when(favoriteService.getFavoritesByTarget(targetId, targetType)).thenReturn(Arrays.asList(favorite));
 
-        when(favoriteService.getFavoritesByTarget(targetId, targetType)).thenReturn(favorites);
-
+        // Act
         ResponseEntity<List<Favorite>> response = favoriteController.getFavoritesByTarget(targetId, targetType);
 
-        assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertEquals(favorites, response.getBody());
+        // Assert
         verify(favoriteService).getFavoritesByTarget(targetId, targetType);
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+        assertEquals(Arrays.asList(favorite), response.getBody());
     }
-
 }
+
